api添加好友时的推送通知